<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">


    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/form_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_marginTop="16dp"
        android:id="@+id/edt_name"
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatEditText

        android:id="@+id/edt_username"
        android:hint="@string/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatEditText

        android:id="@+id/edt_jk"
        android:hint="@string/jk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatEditText

        android:id="@+id/edt_email"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatEditText

        android:id="@+id/edt_image"
        android:hint="@string/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:inputType="textPassword"
        android:id="@+id/edt_password"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_register"
        android:textSize="16sp"
        android:textColor="#fff"
        android:background="@color/colorAccent"
        android:text="Register"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ProgressBar
        android:visibility="gone"
        android:id="@+id/pb_register"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</androidx.appcompat.widget.LinearLayoutCompat>