<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_pass_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/login"
        android:textColor="#fff"
        android:textSize="16sp" />
    <ProgressBar
        android:visibility="gone"
        android:id="@+id/pd_login"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_register_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/apakah_belum_punya_akun_register_sekarang"
        android:textSize="15sp"
        android:textStyle="bold" />

</androidx.appcompat.widget.LinearLayoutCompat>